using longDateTime type value
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44136

--- a/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Views/TrafficAnalysis/ReleaseCodeStatistics.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Analytics.Web/WhS_Analytics/Views/TrafficAnalysis/ReleaseCodeStatistics.html
@@ -9,7 +9,7 @@
 
                 <vr-whs-be-supplier-selector normal-col-num="2" ismultipleselection on-ready="onSupplierDirectiveReady"></vr-whs-be-supplier-selector>
 
-                <vr-timerange on-ready="onTimeRangeDirectiveReady" type="dateTime" width="normal" period="today" from="fromDate" to="toDate"></vr-timerange>
+                <vr-timerange on-ready="onTimeRangeDirectiveReady" type="longDateTime" width="normal" period="today" from="fromDate" to="toDate"></vr-timerange>
                 <vr-whs-be-switch-selector normal-col-num="2" on-ready="onSwitchDirectiveReady" ismultipleselection></vr-whs-be-switch-selector>
                 <!--<span ng-show="advancedSelected">
                     <vr-common-country-selector normal-col-num="2" on-ready="onCountryDirectiveReady" ismultipleselection></vr-common-country-selector>
