adding the subview tab in the account manager definitions
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44138

--- a/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/Template/AccountManagerDefinitionEditorTemplate.html
+++ b/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/Template/AccountManagerDefinitionEditorTemplate.html
@@ -1,5 +1,10 @@
-﻿<vr-tab header="'Settings'">
+﻿<vr-tab header="'AssignmentDefinitions'">
     <vr-columns colnum="12">
     <vr-accountmanager-accountmanagerdefinition-grid on-ready="onGridReady"></vr-accountmanager-accountmanagerdefinition-grid>
         </vr-columns>
+</vr-tab>
+<vr-tab header="'SubViews'">
+    <vr-columns colnum="12">
+        <vr-accountmanager-subviews-grid on-ready="onSubViewGridReady"></vr-accountmanager-subviews-grid>
+    </vr-columns>
 </vr-tab>
