fixing changes in title of list of services in edit service
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44141

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SupplierService/SupplierServiceEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SupplierService/SupplierServiceEditor.html
@@ -9,6 +9,7 @@
                                                                 onselectitem="scopeModel.onServiceItemSelected"
                                                                 ondeselectitem="scopeModel.onServiceItemDeSelected"
                                                                 isrequired="true"
+                                                                label="Parent Services"
                                                                 ismultipleselection="true">
                         </vr-whs-be-zone-service-config-selector>
                     </span>
