Implement Company Extended Settings
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44152

--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/CompanySettings/CompanySettingsEditor.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/CompanySettings/CompanySettingsEditor.html
@@ -55,6 +55,9 @@
                         </vr-columns>
                     </vr-section>
                 </vr-tab>
+                <vr-span ng-repeat="companyDefinition in scopeModel.companyDefinitions">
+                    <vr-directivewrapper directive="companyDefinition.Entity.Setting.RuntimeEditor" on-ready="companyDefinition.Entity.onDirectiveReady" isrequired="false"></vr-directivewrapper>
+                </vr-span>
             </vr-tabs>
 
 
