adding settings tab to account manager definitions
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44153

--- a/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/Template/AccountManagerDefinitionEditorTemplate.html
+++ b/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/Template/AccountManagerDefinitionEditorTemplate.html
@@ -1,10 +1,13 @@
-﻿<vr-tab header="'AssignmentDefinitions'">
-    <vr-columns colnum="12">
-    <vr-accountmanager-accountmanagerdefinition-grid on-ready="onGridReady"></vr-accountmanager-accountmanagerdefinition-grid>
-        </vr-columns>
-</vr-tab>
-<vr-tab header="'SubViews'">
-    <vr-columns colnum="12">
-        <vr-accountmanager-subviews-grid on-ready="onSubViewGridReady"></vr-accountmanager-subviews-grid>
-    </vr-columns>
-</vr-tab>
+﻿<vr-tab header="'Settings'">
+    <vr-accountmanager-accountmanagerdefinitionsettings on-ready="onSelectiveReady"></vr-accountmanager-accountmanagerdefinitionsettings>
+        </vr-tab>
+        <vr-tab header="'AssignmentDefinitions'">
+            <vr-columns colnum="12">
+                <vr-accountmanager-accountmanagerdefinition-grid on-ready="onGridReady"></vr-accountmanager-accountmanagerdefinition-grid>
+            </vr-columns>
+        </vr-tab>
+        <vr-tab header="'SubViews'">
+            <vr-columns colnum="12">
+                <vr-accountmanager-subviews-grid on-ready="onSubViewGridReady"></vr-accountmanager-subviews-grid>
+            </vr-columns>
+        </vr-tab>
