--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceListTemplate/SalePriceListTemplateEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceListTemplate/SalePriceListTemplateEditor.html
@@ -4,7 +4,7 @@
 			<vr-tabs>
 				<vr-tab header="'Definition'">
 					<vr-row>
-						<vr-columns width="normal">
+						<vr-columns colnum="4">
 							<vr-textbox label="Name" value="scopeModel.name" isrequired="true"></vr-textbox>
 						</vr-columns>
 					</vr-row>
