adding settings tab in runtime account manager
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44161

--- a/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Views/AccountManagerManagement.html
+++ b/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Views/AccountManagerManagement.html
@@ -19,7 +19,7 @@
         </vr-row>
         <vr-row>
             <vr-columns colnum="12" simplecol>
-                <vr-accountmanager-accountmanager-grid on-ready="scopeModel.onGridReady"></vr-accountmanager-accountmanager-grid>
+                <vr-accountmanager-grid on-ready="scopeModel.onGridReady"></vr-accountmanager-grid>
 </vr-columns>
         </vr-row>
     </vr-form>
