--- a/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Views/AccountManagerEditor.html
+++ b/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Views/AccountManagerEditor.html
@@ -2,15 +2,22 @@
     <vr-modalbody>
         <vr-form name="formFilter">
             <vr-tabs>
-            <vr-tab header="'Definitions'">
-                <vr-row>
-                    <vr-columns colnum="4">
-                        <vr-sec-user-selector on-ready="scopeModel.onUserSelectorReady" normal-col-num="2"></vr-sec-user-selector>
-                    </vr-columns>
-                </vr-row>
-            </vr-tab>
-                </vr-tabs>
-</vr-form>
+                <vr-tab header="'Settings'">
+                    <vr-row>
+                        <vr-columns colnum="4">
+                            <vr-directivewrapper directive="scopeModel.runtimeEditor" on-ready="scopeModel.onDirectiveReady" normal-col-num="4" isrequired="ctrl.isrequired"></vr-directivewrapper>
+                        </vr-columns>
+                    </vr-row>
+                </vr-tab>
+                <vr-tab header="'Definitions'">
+                    <vr-row>
+                        <vr-columns colnum="4">
+                            <vr-sec-user-selector on-ready="scopeModel.onUserSelectorReady" normal-col-num="2"></vr-sec-user-selector>
+                        </vr-columns>
+                    </vr-row>
+                </vr-tab>
+            </vr-tabs>
+        </vr-form>
     </vr-modalbody>
     <div>
         <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
