--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Reports/InvoiceReportByCurrency.rdlc
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Reports/InvoiceReportByCurrency.rdlc
@@ -1774,7 +1774,6 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
-                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
@@ -1821,7 +1820,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Round(Fields!AmountAfterCommission.Value,2)</Value>
+                              <Value>=Round(Fields!OriginalAmountAfterCommission.Value,2)</Value>
                               <Style>
                                 <FontFamily>Verdana</FontFamily>
                                 <FontSize>8pt</FontSize>
@@ -2519,6 +2518,10 @@
         </Field>
         <Field Name="AmountAfterCommission">
           <DataField>AmountAfterCommission</DataField>
+          <rd:TypeName>System.Decimal</rd:TypeName>
+        </Field>
+        <Field Name="OriginalAmountAfterCommission">
+          <DataField>OriginalAmountAfterCommission</DataField>
           <rd:TypeName>System.Decimal</rd:TypeName>
         </Field>
       </Fields>
