--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SaleRate/SaleRateManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SaleRate/SaleRateManagement.html
@@ -6,10 +6,14 @@
                 <vr-whs-be-sellingnumberplan-selector normal-col-num="2" on-ready="onSellingNumberPlanDirectiveReady" selectedvalues="selectedSellingNumberPlan"
                                                       onselectionchanged="onSellingNumberPlanSelectionChanged" isrequired="true"></vr-whs-be-sellingnumberplan-selector>
 
-                <span ng-show="selectedSellingNumberPlan" vr-loader="isLoadingSaleZonesSelector">
-                    <vr-whs-be-salezone-selector ismultipleselection normal-col-num="2" on-ready="onSaleZoneDirectiveReady">
-                    </vr-whs-be-salezone-selector>
-                </span>
+
+                <vr-columns width="normal" haschildcolumns>
+                    <vr-common-country-selector on-ready="onCountryReady" ismultipleselection></vr-common-country-selector>
+                </vr-columns>
+
+                <vr-columns width="normal">
+                    <vr-textbox value="saleZoneName" label="Zone Name"></vr-textbox>
+                </vr-columns>
 
                 <vr-columns width="normal">
                     <vr-select label="Owner Type"
