update multinet script
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44197

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/CarrierAccount/Templates/CarrierAccountGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/CarrierAccount/Templates/CarrierAccountGridTemplate.html
@@ -16,6 +16,9 @@
     <vr-datagridcolumn headertext="'Services'" field="'Services'">
         <vr-whs-be-services-viewer on-ready="dataItem.onServiceReady"></vr-whs-be-services-viewer>
     </vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Invoice Type'" field="'InvoiceTypeDescription'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Invoice Setting'" field="'InvoiceSettingName'" type="'Text'"></vr-datagridcolumn>
+
     <vr-datagridexpandablerow>
         <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
     </vr-datagridexpandablerow>
