Add services column to routing product grid
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44203

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/RoutingProduct/Templates/RoutingProductGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/RoutingProduct/Templates/RoutingProductGridTemplate.html
@@ -8,6 +8,9 @@
     <vr-datagridcolumn headertext="'ID'" field="'Entity.RoutingProductId'" widthfactor="5"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Selling Number Plan'" field="'SellingNumberPlan'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Default Services'" fixedwidth="90">
+        <vr-whs-be-services-viewer on-ready="dataItem.onServiceViewerReady"></vr-whs-be-services-viewer>
+    </vr-datagridcolumn>
     <vr-datagridexpandablerow>
         <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
     </vr-datagridexpandablerow>
