--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SupplierPricelist/Templates/SupplierPricelistGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SupplierPricelist/Templates/SupplierPricelistGridTemplate.html
@@ -3,9 +3,8 @@
              dataretrievalfunction="dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
-             idfield="Entity.PriceListId"
              defaultsortbyfieldname="'Entity.CreateTime'" defaultsortdirection="'DESC'" enableautoexport="true">
-
+    <vr-datagridcolumn headertext="'Pricelist ID'" field="'Entity.PriceListId'" type="'Text'" fixedwidth="120"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Supplier'" field="'SupplierName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Created Time'" field="'Entity.CreateTime'" type="'Datetime'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Currency'" field="'Currency'" type="'Text'"></vr-datagridcolumn>
